Bug: fix bug on IOS for ignoring hight

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -233,7 +233,7 @@ input[type='reset'] {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+
   height: calc((100% - 30px) / 2) !important;
 
   /* Center slide text vertically */
